src/styles/game.css
body,
html {
	height: 100%;
	background: #000000;
}

#game__hp-money-bar {
	position: fixed;
	width: 120px;
	display: flex;
	flex-direction: column;
	right: 70px;
	top: 35px;
	justify-content: space-evenly;
	min-height: 80px;
	padding-left: 10px;
	background-color: rgba(0, 0, 0, 0.347);
	font-weight: 700;
	font-size: 20px;
}

#game__money-container {
	color: gold;
	display: flex;
	gap: 10px;
}

#game__money-container.active {
	animation-duration: 1.5s;
	animation-name: slidein;
	animation-iteration-count: 2;
}

@keyframes slidein {
	0% {
		transform: scale(1);
	}

	50% {
		transform: scale(2);
	}

	100% {
		transform: scale(1);
	}
}

#game__hp-container {
	color: rgba(245, 6, 6, 0.804);
	display: flex;
	gap: 10px;
}

#game__sound-icon {
	position: absolute;
	right: 250px;
	top: 35px;
	width: 96px;
	height: 96px;
	min-width: 20px;
	min-height: 20px;
}

#game__menu {
	display: flex;
	position: fixed;
	justify-content: center;
	left: 50%;
	transform: translate(-50%, 0);
	top: 75%;
}

.game__menu-item-wrapper {
	background: rgba(44, 44, 44, 0.725);
	border: solid;
	margin: 5px;
	flex: 0 0 auto;
}

.game__menu-item-title {
	text-align: center;
	padding: 5px;
	font-family: gameMenuTitle;
}

.game__menu-item-price {
	text-align: center;
	padding: 10px;
	display: flex;
	justify-content: center;
	gap: 5px;
	font-size: 20px;
	font-family: gameMenuPrice;
	color: gold;
	border-top: black 2px solid;
}

.game__menu-item-img {
	background: url('../assets/sprites/towers/supremeLaserCannon.png');
	background-repeat: no-repeat;
	background-position: 0 0;
	height: 128px;
	width: 128px;
}

.game__menu-item-wrapper:hover {
	opacity: 0.6;
}

@font-face {
	font-family: gameMenuTitle;
	src: url(./fonts/AquireBold-8Ma60.otf);
}

@font-face {
	font-family: gameMenuPrice;
	src: url(./fonts/Aquire-BW0ox.otf);
}

